--- a/src/app/components/customer/customer-rental/customer-rental-card/customer-rental-card.component.html
+++ b/src/app/components/customer/customer-rental/customer-rental-card/customer-rental-card.component.html
@@ -1,4 +1,4 @@
-<mat-card style="font-family:'Inter', sans-serif;">
+<mat-card style="font-family:'Inter', sans-serif;" class="mb-2">
   <mat-card-title style="font-size: 18px;">
     <span>
       <span style="text-align: left;">
