implemented customer dashboard

--- a/src/app/components/customer/customer-home/customer-home.component.css
+++ b/src/app/components/customer/customer-home/customer-home.component.css
@@ -9,3 +9,12 @@
   vertical-align: middle;
   padding-left: 4px;
 }
+
+.hover {
+  transition: background-color 0.2s;
+}
+
+.hover:hover {
+  cursor: pointer;
+  background-color: rgba(173, 216, 230, 0.6);
+}
