--- a/src/app/components/customer/customer-home/customer-home.component.html
+++ b/src/app/components/customer/customer-home/customer-home.component.html
@@ -12,7 +12,94 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col-sm-12">
-      <button class="float-right btn btn-primary" style="width: 25%;" (click)="openVehicleRentalFilterPopup()">Rent A Vehicle</button>
+      <button class="float-right btn btn-primary" style="width: 25%;" (click)="openVehicleRentalFilterPopup()">Rent A
+        Vehicle</button>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-sm-6">
+      <ngx-spinner [fullScreen]="false" [name]="'time-list-on-going'" [bdColor]="'none'" [color]="'black'"
+        [type]="'ball-clip-rotate'" [size]="'medium'"></ngx-spinner>
+
+      <mat-card style="font-family: 'Inter', sans-serif">
+        <mat-card-title style="font-size: 18px;">
+          My On-Going Rental
+        </mat-card-title>
+
+        <mat-card-subtitle class="fonts" *ngIf="onGoingTimeList.length > 0">
+          {{onGoingTimeList[0].timeLeft}} On Your Rental
+        </mat-card-subtitle>
+
+        <mat-card-content>
+          <div class="row" *ngIf="onGoingTimeList.length == 0">
+            <div class=" col-sm-12">
+              <div class="alert alert-info">
+                <h5 class="alert-heading">No On-Going Rental</h5>
+                You Have No On-Going Rental
+              </div>
+            </div>
+          </div>
+          <div class="row" *ngIf="onGoingTimeList.length > 0">
+            <div class="col-sm-12" *ngFor="let rental of onGoingTimeList">
+              <app-customer-rental-card [theRental]="rental"></app-customer-rental-card>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-sm-6">
+      <ngx-spinner [fullScreen]="false" [name]="'card'" [bdColor]="'none'" [color]="'black'" [type]="'ball-clip-rotate'"
+        [size]="'medium'"></ngx-spinner>
+
+      <div class="row">
+        <div class="col-sm-4" style="padding-right: 0px;" [routerLink]="['/customer','rentals','pending']">
+          <mat-card class="hover">
+            <div class="row">
+              <div class="col-sm-12" style="text-align: center;">
+                <span style="font-size: 70px;">{{pendingCount}}</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12 fonts" style="text-align: center; font-size: 18px;">
+                Pending Rentals
+              </div>
+            </div>
+          </mat-card>
+        </div>
+
+        <div class="col-sm-4" style="padding-left: 0px;padding-right:0px;"
+          [routerLink]="['/customer','rentals','rejected']">
+          <mat-card class="hover">
+            <div class="row">
+              <div class="col-sm-12" style="text-align: center;">
+                <span style="font-size: 70px;">{{rejectedCount}}</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12 fonts" style="text-align: center; font-size: 18px;">
+                Rejected Rentals
+              </div>
+            </div>
+          </mat-card>
+        </div>
+
+        <div class="col-sm-4" style="padding-left: 0px;" [routerLink]="['/customer','rentals','past']">
+          <mat-card class="hover">
+            <div class="row">
+              <div class="col-sm-12" style="text-align: center;">
+                <span style="font-size: 70px;">{{pastCount}}</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12 fonts" style="text-align: center; font-size: 18px;">
+                Past Rentals
+              </div>
+            </div>
+          </mat-card>
+        </div>
+      </div>
     </div>
   </div>
 </div>
