--- a/src/app/components/customer/customer-rental/customer-rental-detailed/customer-rental-detailed.component.html
+++ b/src/app/components/customer/customer-rental/customer-rental-detailed/customer-rental-detailed.component.html
@@ -69,8 +69,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="alert alert-primary">
-            <h5 class="alert-heading">My Submitted Documents</h5>
-            These are the documents that you provided when you made your rental to claim your identification.
+            <h5 class="alert-heading">My Identification Documents</h5>
           </div>
         </div>
       </div>
@@ -131,7 +130,7 @@
       <div class="row mb-3">
         <div class="col-sm-12">
           <div class="alert alert-primary" style="text-align: center;">
-            <span class="fonts" style="font-size: 22px;">Total Payable -
+            <span class="fonts" style="font-size: 22px;">Total Cost -
               {{theRental.totalCostForRental.toFixed(2)}}</span>
           </div>
         </div>
