--- a/src/app/components/shared/show-vehicle-on-rental/show-vehicle-on-rental.component.html
+++ b/src/app/components/shared/show-vehicle-on-rental/show-vehicle-on-rental.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="row">
+  <div class="row" *ngIf="vehicleToBeRented">
     <div class="col-sm-4 col-md-4 col-lg-4">
       <img [src]="vehicleToBeRented.vehicleImage" style="width: 100%; height: 100%;border-radius: 5px;">
     </div>
@@ -40,6 +40,11 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="row" *ngIf="!vehicleToBeRented">
+    <div class=" col-sm-12 col-md-12 col-lg-12">
+      <span class="heading">Vehicle Removed From Banger and Co</span>
     </div>
   </div>
 </div>
