--- a/src/app/components/customer/rent-vehicle/total-cost/total-cost.component.html
+++ b/src/app/components/customer/rent-vehicle/total-cost/total-cost.component.html
@@ -42,7 +42,7 @@
       <button style="width: 100%;" class="btn btn-primary" (click)="proceedRental()">Proceed With Rental</button>
     </div>
     <div class="col-sm-12 col-lg-12 col-md-12"
-      *ngIf="(rental.approved == null || (rental.approved == true && rental.collected == false) && rental)">
+      *ngIf="rental && (rental.approved == null || (rental.approved == true && rental.collected == false))">
       <button style="width: 100%;" class="btn btn-primary" (click)="customizeAddons()">Customize The Add Ons</button>
     </div>
   </div>
