updated average price per day label

--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-type-management/vehicle-type-create-manage/scraped-prices/vehicle-type-card-info/type-card-info.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-type-management/vehicle-type-create-manage/scraped-prices/vehicle-type-card-info/type-card-info.component.html
@@ -4,7 +4,7 @@
       <mat-card-content>
         <span class="fonts" style="font-size:17px">{{eachType.vehicleType |
           titlecase}}</span>
-        <span class="badge badge-info p-2 float-right" style="font-size: 16px;">Average Price: LKR
+        <span class="badge badge-info p-2 float-right" style="font-size: 16px;">Average Price/Day: LKR
           {{eachType.averagePricePerDay.toFixed(2)}}</span>
       </mat-card-content>
     </mat-card>
