--- a/src/app/components/customer/customer-home/customer-home.component.html
+++ b/src/app/components/customer/customer-home/customer-home.component.html
@@ -11,7 +11,11 @@
 
 <div class="container mt-3">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-5" *ngIf="loggedInUser">
+      <span class="badge badge-danger p-2" style="font-size: 16px;" *ngIf="loggedInUser.blacklisted === true">Account Status: Blacklisted</span>
+      <span class="badge badge-success p-2" style="font-size: 16px;" *ngIf="loggedInUser.blacklisted === false">Account Status: Active</span>
+    </div>
+    <div class="col-sm-7">
       <button class="float-right btn btn-primary" style="width: 25%;" (click)="openVehicleRentalFilterPopup()">Rent A
         Vehicle</button>
     </div>
