updated header on vehicle create/update

--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
@@ -1,6 +1,7 @@
 <!-- create a reactive form to handle the processing -->
 <div class="modal-header">
-  <h5 class="modal-title">Create a Vehicle</h5>
+  <h5 class="modal-title" *ngIf="!vehicleBeingEdited">Create a Vehicle</h5>
+  <h5 class="modal-title" *ngIf="vehicleBeingEdited">Update a Vehicle</h5>
   <button type="button" class="close float-right" (click)="hideModal()">
     <span>&times;</span>
   </button>
