--- a/src/app/components/admin/admin-rental-list/completed-rentals/completed-rentals.component.html
+++ b/src/app/components/admin/admin-rental-list/completed-rentals/completed-rentals.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-section-header [sectionText]="'Completed Rentals At Banger and Co.'" (filterTriggered)="search($event)"
-  (customerNameFilter)="searchByCustomerName($event)" [totalCaption]="'Total Approved: '+filteredList.length">
+  (customerNameFilter)="searchByCustomerName($event)" [totalCaption]="'Total Completed: '+filteredList.length">
 </app-section-header>
 
   <div class="row">
