--- a/src/app/components/admin/admin-rental-list/admin-rental-list.component.html
+++ b/src/app/components/admin/admin-rental-list/admin-rental-list.component.html
@@ -8,7 +8,7 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLinkActive="active" [routerLink]="['/admin','rentals','approved']"
-        [routerLinkActiveOptions]="">Approved (Can Collected) Rentals</a>
+        [routerLinkActiveOptions]="">Approved (Can Be Collected) Rentals</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLinkActive="active" [routerLink]="['/admin','rentals','rejected']"
