--- a/src/app/components/customer/rent-vehicle/total-cost/total-cost.component.html
+++ b/src/app/components/customer/rent-vehicle/total-cost/total-cost.component.html
@@ -23,7 +23,11 @@
             <li class="list-group-item" style="background-color:#f7fafc; padding-left: 5px;"
               *ngFor="let equipment of listOfEquipmentsAdded">
               <span class="float-left">{{equipment.equipment.equipmentName}} (x{{equipment.quantity}})</span>
-              <span class="float-right fonts">LKR - {{equipment.totalCost.toFixed(2)}}</span>
+              <span class="float-right fonts">LKR - {{equipment.totalCost.toFixed(2)}}
+                <i class="fal fa-window-close" style="font-size: 16px; margin-left: 5px; color: black;"
+                  (click)="removeItemFromRental(equipment)"
+                  *ngIf="(rental) && (rental.approved == null || (rental.approved == true && rental.collected == false))"></i>
+              </span>
             </li>
           </ul>
         </div>
